added skeleton classes for an image preview feedwq

--- a/gui/src/qml/qml.qrc
+++ b/gui/src/qml/qml.qrc
@@ -9,5 +9,6 @@
         <file>icons/camera-off.svg</file>
         <file>icons/eye.svg</file>
         <file>icons/eye-off.svg</file>
+        <file>images/no_image.png</file>
     </qresource>
 </RCC>
