--- a/client/resources/rckam.glade
+++ b/client/resources/rckam.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
-  <object class="GtkApplicationWindow" id="rckamMainWindow">
+  <object class="GtkApplicationWindow" id="mainWindow">
     <property name="can-focus">False</property>
     <property name="default-width">1000</property>
     <property name="default-height">1000</property>
